--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,9 +20,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: borales/actions-yarn@v3.0.0
+      uses: actions/setup-node@v3
       with:
-          cmd: install # will run `yarn install` command
-    - uses: borales/actions-yarn@v3.0.0
-        with:
-          cmd: build # will run `yarn build` command
+        node-version: ${{ matrix.node-version }}
+    - name: Setup yarn
+        run: npm install -g yarn
+    - name: Setup Nodejs with yarn caching
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: yarn
+    - name: Install dependencies
+        run: yarn
+    - name: Build 
+        run: yarn build --if-present
