--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,14 +23,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Setup yarn
-        run: npm install -g yarn
-    - name: Setup Nodejs with yarn caching
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: yarn
-    - name: Install dependencies
-        run: yarn
-    - name: Build 
-        run: yarn build --if-present
+        cache: 'npm'
+    - run: npm i
+    - run: npm run build --if-present
