--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,7 @@ on:
 
 jobs:
   build:
-
     runs-on: self-hosted
-
     strategy:
       matrix:
         node-version: [14.x]
@@ -25,3 +23,10 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present
+  
+  deploy:
+    runs-on: self-hosted
+    needs: build
+    steps:
+    - name: Move file
+      run: rm -rf ~/react_app/static && cp -R ./build ~/react_app/static
