--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,13 +9,10 @@ on:
 
 jobs:
   build:
-
     runs-on: self-hosted
-
     strategy:
       matrix:
         node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -26,4 +23,10 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present
-    - run: npm test
+  
+  deploy:
+    runs-on: self-hosted
+    needs: build
+    steps:
+    - name: Move file
+      run: rm -rf ~/react_app/static && cp -R ./build ~/react_app/static
